Chandged all collect method on toList method